--- a/config.json
+++ b/config.json
@@ -7,5 +7,18 @@
       "Regle 1",
       "Regle 2"
     ]
+  },
+  "712841543064485939": {
+    "modo_role": "G P",
+    "message": 726823007359598593,
+    "channel": 712846557996646410,
+    "emot_role": {
+      "<:python:712999397855592489>": "Python",
+      "<:php:712999444924334142>": "Php",
+      "<:javascript:712999491623583845>": "Javascript"
+    }
+  },
+  "726182561344389181": {
+    "modo_role": "Ped"
   }
 }
